Updated requirements txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,16 @@ Jinja2==2.8
 MarkupSafe==0.23
 numpy==1.11.0
 pandas==0.18.1
-plotly==1.10.0
+plotly==1.11.0
 psycopg2==2.6.1
 pycparser==2.14
 python-dateutil==2.5.3
 pytz==2016.4
 PyYAML==3.11
 requests==2.10.0
+scikit-learn==0.17.1
+simplejson==3.8.2
 six==1.10.0
+sklearn==0.0
 SQLAlchemy==1.0.13
 Werkzeug==0.11.10
-WTForms==2.1
