Fix for ebexensions

--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -1,5 +1,6 @@
 packages:
   yum:
-    postgresql-devel: []
     postgresql94-devel: []
-    gcc: []
+    libffi-devel: []
+    libxml2: []
+    libxml2-devel: []
