packages: gcc-c++ and python-devel for pandas on Elastic Beanstalk

--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -1,6 +1,9 @@
 packages:
   yum:
     postgresql94-devel: []
+    gcc: []
+    gcc-c++: []
+    python-devel: []
     libffi-devel: []
     libxml2: []
     libxml2-devel: []
