--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -1,8 +1,11 @@
 packages:
   yum:
+    postgresql94: []
     postgresql94-devel: []
     gcc: []
     gcc-c++: []
+    git: []
+    python27-devel: []
     python-devel: []
     libffi-devel: []
     libxml2: []
