--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cffi==1.6.0
 Flask==0.10.1
 Flask-Bcrypt==0.7.1
 Flask-SQLAlchemy==2.1
+Flask-WTF==0.12
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
